# 1t

./: 1t.desktop  CMakeLists.txt
src/: 1t.cpp  1t.h  debug.cpp  debug.h  escapeparser.cpp  escapeparser.h  mousehandler.cpp  mousehandler.h  regex.cpp  terminalwidget.cpp  terminalwidget.h
